[gd_scene load_steps=2 format=3 uid="uid://drtpqw8o7hw7u"]

[ext_resource type="Script" uid="uid://dlcqxo43yrs0w" path="res://scripts/startup_screen.gd" id="1_jamkg"]

[node name="StartupScreen" type="Node2D"]
script = ExtResource("1_jamkg")

[node name="TaskDescriptionLabel" type="RichTextLabel" parent="."]
offset_left = 17.0
offset_top = 14.0
offset_right = 784.0
offset_bottom = 300.0
bbcode_enabled = true
text = "[font_size=60]연속 암기 테스트[/font_size]

처음에 화면에 나오는 기호(들)을 외웁니다.

이후에 다른 기호가 하나씩 화면에 나타납니다.
이 기호가 [color=yellow]처음에 외웠던 기호(들) 중에 있었는 지[/color] 맞춰야 합니다.

외웠던 기호라면, [color=yellow]스페이스바[/color]를 누릅니다.
그렇지 않다면, 아무것도 누르지 않습니다."
horizontal_alignment = 1

[node name="SymbolTypeSelect" type="OptionButton" parent="."]
offset_left = 176.0
offset_top = 346.0
offset_right = 293.0
offset_bottom = 377.0
selected = 1
item_count = 2
popup/item_0/text = "색칠된 네모"
popup/item_0/id = 0
popup/item_1/text = "색칠된 도형"
popup/item_1/id = 1

[node name="DifficultyCurveSelect" type="OptionButton" parent="."]
offset_left = 536.0
offset_top = 346.0
offset_right = 673.0
offset_bottom = 377.0
selected = 2
item_count = 3
popup/item_0/text = "점점 증가"
popup/item_0/id = 0
popup/item_1/text = "자동 조정"
popup/item_1/id = 1
popup/item_2/text = "일찍 자동 조정"
popup/item_2/id = 2

[node name="Label" type="Label" parent="."]
offset_left = 176.0
offset_top = 316.0
offset_right = 245.0
offset_bottom = 339.0
text = "기호 종류"

[node name="Label2" type="Label" parent="."]
offset_left = 323.0
offset_top = 316.0
offset_right = 392.0
offset_bottom = 339.0
text = "라운드 수"

[node name="Label3" type="Label" parent="."]
offset_left = 426.0
offset_top = 316.0
offset_right = 479.0
offset_bottom = 339.0
text = "문제 수"

[node name="Label4" type="Label" parent="."]
offset_left = 536.0
offset_top = 316.0
offset_right = 621.0
offset_bottom = 339.0
text = "난이도 조정"

[node name="ReadyButton" type="Button" parent="."]
offset_left = 275.0
offset_top = 470.0
offset_right = 525.0
offset_bottom = 522.0
text = "시작!"

[node name="MaxLevel" type="SpinBox" parent="."]
offset_left = 176.0
offset_top = 422.0
offset_right = 262.563
offset_bottom = 453.0
min_value = 1.0
value = 7.0

[node name="Label5" type="Label" parent="."]
offset_left = 176.0
offset_top = 392.0
offset_right = 245.0
offset_bottom = 415.0
text = "최대 난이도"

[node name="RoundNum" type="SpinBox" parent="."]
offset_left = 323.0
offset_top = 346.0
offset_right = 410.0
offset_bottom = 377.0
min_value = 1.0
value = 7.0

[node name="ProblemNum" type="SpinBox" parent="."]
offset_left = 426.0
offset_top = 346.0
offset_right = 513.0
offset_bottom = 377.0
min_value = 1.0
value = 10.0

[connection signal="pressed" from="ReadyButton" to="." method="_on_ready_button_pressed"]
